# laps

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  build-test-data.sh  format-check.sh  format.sh  laps.nix  package-lock.json  package.json  shell.nix  travis_id_rsa.enc  webpack.config.js
config/: default.toml  test.toml
frontend/: admin.html  admin.js  index.html  index.js  login.html  login.js  route.js  route_production.js  store.js
frontend/components/: AdminPanelModules.vue  DrawCords.vue  GetAlgorithm.vue  GetMap.vue  Header.vue  RequestJobResults.vue  SendCords.vue  login.vue  loginLink.vue  moduleUploader.vue  registrationBox.vue  uploadMap.vue
laps_convert/: Cargo.toml
laps_convert/src/: lib.rs
laps_convert_cli/: Cargo.toml
laps_convert_cli/src/: main.rs
laps_module_runner/: Dockerfile  laps.py
src/: main.rs  module_handling.rs  test.rs  types.rs  util.rs  web.rs
src/web/: admin.rs  algorithms.rs  job.rs  map.rs  mime_consts.rs  multipart.rs
src/web/admin/: adminsession.rs  login.rs  map.rs  map_upload.rs  mapuploadrequest.rs  modules.rs  test.rs
test_data/: LICENSE  test_image.tar
test_data/height_data/: LICENSE  dtm1.tif
test_data/test_module/: main.py
test_data/test_modules/failing/: main.py
test_data/test_modules/simple/: main.py
