[package]
name = "laps"
version = "0.1.0"
authors = ["Håkon Jordet <haakon.jordet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darkredis = "0.6.1"
futures = "0.3.4"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
tokio = { version = "0.2.11", features = ["full"] }
tracing = "0.1.12"
tracing-futures = "0.2.1"
tracing-subscriber = "0.2.0"
warp = "0.2.1"