[package]
name = "laps"
version = "0.1.0"
authors = ["Håkon Jordet <haakon.jordet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
config = { version = "0.10.1", default-features = false, features = ["toml"] }
darkredis = "0.6.1"
env_logger = "0.7.1"
futures = "0.3.4"
lazy_static = "1.4.0"
log = "0.4.8"
num_cpus = "1.12.0"
quick-error = "1.2.3"
rand = "0.7.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
tokio = { version = "0.2.11", features = ["full"] }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"
features = ["json"]
default-features = false