[package]
name = "laps"
version = "0.1.0"
authors = ["Håkon Jordet <haakon.jordet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "laps_convert", "laps_convert_cli" ]

[dependencies]
base64 = "0.12.0"
blake2 = "0.8.1"
bollard = "0.5.0"
byteorder = "1.3.4"
config = { version = "0.10.1", default-features = false, features = ["toml"] }
darkredis = "0.7.0"
env_logger = "0.7.1"
futures = "0.3.4"
laps_convert = { path = "laps_convert"}
lazy_static = "1.4.0"
log = "0.4.8"
mime = "0.2.6"
multipart = { default-features = false, version = "0.16.1", features = ["server"] }
num_cpus = "1.12.0"
png = "0.16.1"
quick-error = "1.2.3"
rand = "0.7.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
tar = "0.4.26"
tempfile = "3.1.0"
tokio = { version = "0.2.11", features = ["full"] }


[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"
features = ["json", "serve"]
default-features = false

[dev-dependencies]
gdal = { version = "0.6.0", features = ["gdal_2_2", "bindgen"] }

[dev-dependencies.multipart]
default-features = false
features = ["server", "client"]
version = "0.16.1"

[profile.dev.package.png]
opt-level = 3
