[package]
name = "laps_convert"
version = "0.1.0"
authors = ["Håkon Jordet <haakon.jordet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darkredis = "0.7.0"
gdal = { version = "0.6.0", features = ["gdal_2_2", "bindgen"] }
log = "0.4.8"
png = "0.16.1"
quick-error = "1.2.3"