[package]
name = "laps_convert_cli"
version = "0.1.0"
authors = ["Håkon Jordet <haakon.jordet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darkredis = "0.7.0"
env_logger = "0.7.1"
laps_convert = { path = "../laps_convert" }
log = "0.4.8"
structopt = "0.3.11"
tokio = { version = "0.2.13", features = ["full"] }
